Fix landing picture width on mobile.

--- a/src/pages/Main.scss
+++ b/src/pages/Main.scss
@@ -108,6 +108,10 @@
       .logo-container {
         margin-bottom: 3rem;
       }
+
+      .Landing-picture {
+        width: 100% !important;
+      }
     }
   }
 }
